added controller test
