# src/main/resources/openapi/organization-openapi-v1.0.yml
@@ -150,31 +150,13 @@ paths:
       summary: Add a new employee to organization
       description: Add a new employee
       operationId: addEmployee
-      parameters:
-        - name: organizationId
-          description: organization ID
-          schema:
-            type: string
-          in: path
-          required: true
-        - name: firstName
-          description: Employee first name
-          schema:
-            type: string
-          in: query
-          required: true
-        - name: lastName
-          description: Employee last name
-          schema:
-            type: string
-          in: query
-          required: true
-        - name: jobTitle
-          description: Job Title of Employee
-          schema:
-            type: string
-          in: query
-          required: true
+      requestBody:
+        description: "Pet object that needs to be added to the store"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateEmployeeRq'
       responses:
         '200':
           description: Successful operation
@@ -320,6 +302,30 @@ components:
             $ref: '#/components/schemas/Employee'
       required:
         - organizationName
+    CreateEmployeeRq:
+      type: object
+      properties:
+        organizationId:
+          type: string
+          nullable: false
+          example: b749d000-9a4f-4bb7-8235-3e47779df243
+        firstName:
+          type: string
+          nullable: false
+          example: Test
+        lastName:
+          type: string
+          nullable: false
+          example: De La Test
+        jobTitle:
+          type: string
+          nullable: false
+          example: Boss
+      required:
+        - organizationId
+        - firstName
+        - lastName
+        - jobTitle
     Employee:
       type: object
       properties:
